// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`image demo > renders _semantic correctly 1`] = `
<div
  class="semantic-preview-container"
  data-v-dfc8ebef=""
>
  <div
    class="ant-row css-var-root semantic-preview-row"
    data-v-dfc8ebef=""
  >
    <div
      class="ant-col ant-col-16 css-var-root semantic-preview-col semantic-preview-col-no-padding"
      data-v-dfc8ebef=""
    >
      <div
        class="ant-flex css-var-v-0 ant-flex-align-center ant-flex-vertical"
        style="min-height: 100%; width: 100%;"
      >
        <div
          class="ant-flex css-var-v-0 ant-flex-justify-center"
          style="padding: 16px; flex: 0 0 auto;"
        >
          <div
            class="ant-image css-var-v-0 ant-image-css-var semantic-mark-root"
            role="button"
            style="width: 200px;"
            tabindex="0"
          >
            <img
              class="ant-image-img semantic-mark-image"
              src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
              width="200"
            />
            <!---->
            <div
              class="ant-image-cover semantic-mark-cover ant-image-cover-center"
            >
              <!---->
            </div>
          </div>
          <!---->
        </div>
        <div
          style="flex: 1 1 0%; position: relative; min-height: 500px; width: 100%;"
        >
          <!---->
          <!--teleport start-->
          <!--teleport end-->
        </div>
      </div>
    </div>
    <div
      class="ant-col ant-col-8 css-var-root"
      data-v-dfc8ebef=""
    >
      <ul
        class="semantic-list"
        data-v-dfc8ebef=""
      >
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  root
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Root element, sets relative positioning and inline-block layout styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  image
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Image element, sets width, height and vertical alignment styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  cover
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Image hover display prompt element, sets absolute positioning, background color, opacity and transition animation styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  popup.root
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Preview root element, sets fixed positioning, z-index and background mask styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  popup.mask
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Preview mask element, sets absolute positioning and semi-transparent background styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  popup.body
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Preview body element, sets flex layout, center alignment and pointer event styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  popup.footer
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Preview footer element, sets absolute positioning, center layout and bottom operation area styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
        <li
          class="semantic-list-item"
          data-v-dfc8ebef=""
        >
          <div
            class="ant-flex css-var-root ant-flex-align-stretch ant-flex-gap-small ant-flex-vertical"
            data-v-dfc8ebef=""
          >
            <div
              class="ant-flex css-var-root ant-flex-align-center ant-flex-justify-space-between ant-flex-gap-small"
              data-v-dfc8ebef=""
            >
              <!-- Title + Version -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <h5
                  class="ant-typography css-var-root"
                  style="margin: 0px;"
                >
                  popup.actions
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                  <!---->
                </h5>
                <!--v-if-->
              </div>
              <!-- Pin + Sample -->
              <div
                class="ant-flex css-var-root ant-flex-align-center ant-flex-gap-small"
                data-v-dfc8ebef=""
              >
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="pushpin"
                      class="anticon anticon-pushpin"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="pushpin"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M878.3 392.1L631.9 145.7c-6.5-6.5-15-9.7-23.5-9.7s-17 3.2-23.5 9.7L423.8 306.9c-12.2-1.4-24.5-2-36.8-2-73.2 0-146.4 24.1-206.5 72.3a33.23 33.23 0 00-2.7 49.4l181.7 181.7-215.4 215.2a15.8 15.8 0 00-4.6 9.8l-3.4 37.2c-.9 9.4 6.6 17.4 15.9 17.4.5 0 1 0 1.5-.1l37.2-3.4c3.7-.3 7.2-2 9.8-4.6l215.4-215.4 181.7 181.7c6.5 6.5 15 9.7 23.5 9.7 9.7 0 19.3-4.2 25.9-12.4 56.3-70.3 79.7-158.3 70.2-243.4l161.1-161.1c12.9-12.8 12.9-33.8 0-46.8zM666.2 549.3l-24.5 24.5 3.8 34.4a259.92 259.92 0 01-30.4 153.9L262 408.8c12.9-7.1 26.3-13.1 40.3-17.9 27.2-9.4 55.7-14.1 84.7-14.1 9.6 0 19.3.5 28.9 1.6l34.4 3.8 24.5-24.5L608.5 224 800 415.5 666.2 549.3z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <button
                  class="ant-btn css-var-root ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-sm ant-btn-icon-only"
                  data-v-dfc8ebef=""
                  type="button"
                >
                  <span
                    class="ant-btn-icon"
                  >
                    <span
                      aria-label="info-circle"
                      class="anticon anticon-info-circle"
                      data-v-dfc8ebef=""
                      role="img"
                    >
                      <svg
                        aria-hidden="true"
                        data-icon="info-circle"
                        fill="currentColor"
                        focusable="false"
                        height="1em"
                        viewBox="64 64 896 896"
                        width="1em"
                      >
                        <path
                          d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                        />
                        <path
                          d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                        />
                      </svg>
                    </span>
                  </span>
                  <!---->
                  <!---->
                </button>
                <!---->
              </div>
            </div>
            <div
              class="ant-typography css-var-root"
              style="margin: 0px; font-size: 12px;"
            >
              Preview actions group element, sets flex layout, background color, border radius and action button styles
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
              <!---->
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`image demo > renders basic correctly 1`] = `
<div
  data-v-app=""
>
  <div
    alt="basic"
    aria-label="basic"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 200px;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
      width="200"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`image demo > renders controlled-preview correctly 1`] = `
<div
  data-v-app=""
>
  <div>
     scaleStep: 0.5 
    <div
      class="ant-input-number ant-input-number-mode-input css-var-root ant-input-number-css-var ant-input-number-outlined"
    >
      <!---->
      <!---->
      <input
        aria-valuemax="5"
        aria-valuemin="0.1"
        aria-valuenow="0.5"
        autocomplete="off"
        class="ant-input-number-input"
        role="spinbutton"
        step="0.1"
        value="0.5"
      />
      <!---->
      <!---->
      <div
        class="ant-input-number-actions"
      >
        <span
          aria-disabled="false"
          aria-label="Increase Value"
          class="ant-input-number-action ant-input-number-action-up"
          role="button"
          unselectable="on"
        >
          <span
            aria-label="up"
            class="anticon anticon-up"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="up"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
              />
            </svg>
          </span>
        </span>
        <span
          aria-disabled="false"
          aria-label="Decrease Value"
          class="ant-input-number-action ant-input-number-action-down"
          role="button"
          unselectable="on"
        >
          <span
            aria-label="down"
            class="anticon anticon-down"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="down"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
              />
            </svg>
          </span>
        </span>
      </div>
    </div>
  </div>
  <br />
  <button
    class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
    type="button"
  >
    <transition-stub
      appear="false"
      css="true"
      name="ant-btn-loading-icon-motion"
      persisted="false"
    >
      <!---->
    </transition-stub>
    <span>
       show image preview 
    </span>
    <!---->
  </button>
  <div
    alt="basic image"
    aria-label="basic image"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 200px;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png?x-oss-process=image/blur,r_50,s_50/quality,q_1/resize,m_mfit,h_200,w_200"
      style="display: none;"
      width="200"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`image demo > renders fallback correctly 1`] = `
<div
  data-v-app=""
>
  <div
    alt="basic image"
    aria-label="basic image"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 200px; height: 200px;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      height="200"
      src="error"
      style="height: 200px;"
      width="200"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`image demo > renders imageRender correctly 1`] = `
<div
  data-v-app=""
>
  <div
    alt="slot image"
    aria-label="slot image"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 200px;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
      width="200"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <!---->
    </div>
  </div>
  <!---->
  <br />
  <div
    alt="preview image"
    aria-label="preview image"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 200px;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
      width="200"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`image demo > renders mask correctly 1`] = `
<div
  data-v-app=""
>
  <div
    alt="Default blur"
    aria-label="Default blur"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 100px;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
      width="100"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <div
        class="ant-space ant-space-vertical ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
      >
        <div
          class="ant-space-item"
        >
           Default blur 
        </div>
        <!---->
      </div>
    </div>
  </div>
  <!---->
  <div
    alt="Dimmed mask"
    aria-label="Dimmed mask"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 100px;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      src="https://www.antdv-next.com/antdv-next.svg"
      width="100"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <div
        class="ant-space ant-space-vertical ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
      >
        <div
          class="ant-space-item"
        >
           Dimmed mask 
        </div>
        <!---->
      </div>
    </div>
  </div>
  <!---->
  <div
    alt="No mask"
    aria-label="No mask"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 100px;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      src="https://cn.vuejs.org/logo.svg"
      width="100"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <div
        class="ant-space ant-space-vertical ant-space-align-center ant-space-gap-row-small ant-space-gap-col-small css-var-root"
      >
        <div
          class="ant-space-item"
        >
           No mask 
        </div>
        <!---->
      </div>
    </div>
  </div>
  <!---->
</div>
`;

exports[`image demo > renders nested correctly 1`] = `
<div
  data-v-app=""
>
  <button
    class="ant-btn css-var-root ant-btn-default ant-btn-color-default ant-btn-variant-outlined"
    type="button"
  >
    <transition-stub
      appear="false"
      css="true"
      name="ant-btn-loading-icon-motion"
      persisted="false"
    >
      <!---->
    </transition-stub>
    <span>
       showModal 
    </span>
    <!---->
  </button>
  <!---->
</div>
`;

exports[`image demo > renders placeholder correctly 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center css-var-root"
  style="column-gap: 12px; row-gap: 12px;"
>
  <div
    class="ant-space-item"
  >
    <div
      alt="basic image"
      aria-label="basic image"
      class="ant-image css-var-root ant-image-css-var"
      role="button"
      style="width: 200px;"
      tabindex="0"
    >
      <img
        class="ant-image-img"
        src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png?1505705407795"
        width="200"
      />
      <div
        aria-hidden="true"
        class="ant-image-placeholder"
      >
        <div
          alt="placeholder image"
          class="ant-image css-var-root ant-image-css-var"
          style="width: 200px;"
        >
          <img
            class="ant-image-img"
            src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png?x-oss-process=image/blur,r_50,s_50/quality,q_1/resize,m_mfit,h_200,w_200"
            width="200"
          />
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="ant-image-cover ant-image-cover-center"
      >
        <!---->
      </div>
    </div>
    <!---->
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <button
      class="ant-btn css-var-root ant-btn-primary ant-btn-color-primary ant-btn-variant-solid"
      type="button"
    >
      <transition-stub
        appear="false"
        css="true"
        name="ant-btn-loading-icon-motion"
        persisted="false"
      >
        <!---->
      </transition-stub>
      <span>
         Reload 
      </span>
      <!---->
    </button>
  </div>
  <!---->
</div>
`;

exports[`image demo > renders preview-group correctly 1`] = `
<div
  data-v-app=""
>
  <div
    alt="svg image"
    aria-label="svg image"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 200px;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      src="https://www.antdv-next.com/antdv-next.svg"
      width="200"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <!---->
    </div>
  </div>
  <!---->
  <div
    alt="svg image"
    aria-label="svg image"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 200px;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      src="https://cn.vuejs.org/logo.svg"
      width="200"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <!---->
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`image demo > renders preview-group-visible correctly 1`] = `
<div
  data-v-app=""
>
  <div
    alt="webp image"
    aria-label="webp image"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 200px;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      src="https://gw.alipayobjects.com/zos/antfincdn/LlvErxo8H9/photo-1503185912284-5271ff81b9a8.webp"
      width="200"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <!---->
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`image demo > renders previewSrc correctly 1`] = `
<div
  data-v-app=""
>
  <div
    alt="basic image"
    aria-label="basic image"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 200px;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png?x-oss-process=image/blur,r_50,s_50/quality,q_1/resize,m_mfit,h_200,w_200"
      width="200"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`image demo > renders style-class correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-gap-middle"
>
  <div
    alt="示例图片"
    aria-label="示例图片"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 160px; padding: 4px; border-radius: 8px; overflow: hidden;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
      style="border-radius: 4px;"
      width="160"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <!---->
    </div>
  </div>
  <!---->
  <div
    alt="示例图片"
    aria-label="示例图片"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 160px; border: 2px solid rgb(165, 148, 249); border-radius: 8px; padding: 4px; transition: all 0.3s ease;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      src="https://zos.alipayobjects.com/rmsportal/jkjgkEfvpUPVyRjUImniVslZfWPnJuuZ.png"
      style="border-radius: 4px; filter: grayscale(50%);"
      width="160"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <!---->
    </div>
  </div>
  <!---->
</div>
`;

exports[`image demo > renders toolbarRender correctly 1`] = `
<div
  data-v-app=""
>
  <div
    alt="image-0"
    aria-label="image-0"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 200px;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      src="https://www.antdv-next.com/antdv-next.svg"
      width="200"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <!---->
    </div>
  </div>
  <!---->
  <div
    alt="image-1"
    aria-label="image-1"
    class="ant-image css-var-root ant-image-css-var"
    role="button"
    style="width: 200px;"
    tabindex="0"
  >
    <img
      class="ant-image-img"
      src="https://cn.vuejs.org/logo.svg"
      width="200"
    />
    <!---->
    <div
      class="ant-image-cover ant-image-cover-center"
    >
      <!---->
    </div>
  </div>
  <!---->
  <!---->
</div>
`;
